# conan-stubs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
conan-stubs/model/: conan_file.pyi
src/conan-stubs/model/: conan_file.pyi
src/conans-stubs/model/: conan_file.pyi
