[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conan-stubs"
authors = [{name = "Peter Gosztolya"}]
version = "1.59.0"
requires-python = ">=3.8"
description = "Conan type stubs"
readme = "README.md"
keywords = ["conan", "stubs"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[tool.setuptools]
packages = ["conan-stubs"]

